syntax = "proto2";

option java_package="com.ebay.hadoop.blitzwing.vector";
option java_outer_classname = "DataExchange";

message JniValueNode {
    required int32 length = 1;
    required int32 null_count = 2;
}

message JniBufferNode {
    required int64 address = 1;
    required int32 length = 2;
}

message JniRecordBatch {
    required int32 length = 1;
    repeated JniValueNode nodes = 2;
    repeated JniBufferNode buffers = 3;
}
